routes/test-run-gateway/test-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-httproute
  namespace: test-gtw
  labels:
    app.kubernetes.io/part-of: test-run-gateway
  annotations:
    backstage.io/catalog-entity: resource:default/test-httproute
spec:
  parentRefs:
    - name: httpbin-gtw
      namespace: test-gtw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /status
      backendRefs:
        - name: httpbin
          namespace: test-gtw
          port: 8000
